# PkuClaw

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  agent.md  pyproject.toml  refine.md  skill.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-docs.yml
configs/: config.example.toml
configs/runtime/: README.md  agent.json  agent.toml  events.json  prompts.json  runtime.example.json  runtime.json  skills.json
crates/pku3b/: Cargo.toml  README.md
crates/pku3b/src/: cache.rs  config.rs  id.rs  main.rs  tls.rs  utils.rs
crates/pku3b/src/api/: blackboard.rs  explore.rs  low_level.rs  mod.rs
crates/pku3b/src/api/low_level/: blackboard.rs  iaaa.rs  portal.rs
crates/pku3b/src/cli/: mod.rs  output.rs
docs/: DEVELOPMENT.zh.md  DOC_CODE_GAPS.zh.md  README.zh.md
docs-site/: README.md  astro.config.mjs  next.config.mjs  package-lock.json  package.json  source.config.ts  tailwind.config.ts  tsconfig.json
docs-site/app/: global.css  layout.tsx  page.tsx
docs-site/app/docs/: layout.tsx
docs-site/components/: animated-chat-card.tsx  mdx.tsx  pkuclaw-hero.tsx  pkuclaw-logo-card.tsx  pkuclaw-starfield.tsx  provider.tsx  search.tsx
docs-site/content/docs/: architecture.mdx  configuration.mdx  contributing.mdx  development.mdx  faq.mdx  index.mdx  installation.mdx  meta.json  quick-actions.mdx  runtime.mdx  skills.mdx
docs-site/lib/: layout.shared.tsx
docs-site/src/components/: PkuClawStarfield.astro
docs-site/src/styles/: custom.css
pkuclaw/: __init__.py  cli.py  config.py  daemon.py  loop.py  runtime_config.py  runtime_events.py  runtime_prompts.py
pkuclaw/agents/: __init__.py  artifacts.py  base.py  sinks.py  wrapper.py
pkuclaw/agents/providers/: __init__.py  codex.py
pkuclaw/backbone/: __init__.py  teaching.py
pkuclaw/capabilities/: __init__.py  registry.py
pkuclaw/channels/: __init__.py  base.py  feishu.py  feishu_cards.py
pkuclaw/channels/feishu/: ids.py  (+7 more)
pkuclaw/code_agents/: __init__.py  artifacts.py  base.py  codex.py  factory.py  subskills.py
pkuclaw/connectors/: pku3b.py
pkuclaw/core/: __init__.py  app.py  control.py  events.py  jobs.py  logging.py  loops.py  models.py  router.py  runtime.py  store.py
pkuclaw/mcp/: __init__.py  channel_tools.py  handlers.py  schemas.py  server.py
pkuclaw/notify_queue/: __init__.py  worker.py
pkuclaw/runtime/: __init__.py  bootstrap.py  config.py  events.py  prompts.py  skills.py
pkuclaw/workers/: __init__.py  codex.py
pkuclaw/workflows/: __init__.py  notes.py  sync.py
scripts/: feishu_capture_runtime_target.py  feishu_smoke.py  pkuclaw_notify.py  pkuclaw_outbox.py
sub-skills/runtime/: _detect.md  claude-team.md  codex-subagent.md  create-agent.md  kimi-team.md
sub-skills/tasks/: do-homework.md  write-notes.md
sub-skills/tools/: agent-helpers.md  pdf-reader.md  pku3b-setup.md
tests/: helpers.py  test_agent_codex.py  test_backend_core.py  test_feishu_channel.py  test_router_subskills.py  test_runtime_bootstrap.py  test_runtime_config.py  test_runtime_prompt_architecture.py  test_smoke.py  test_store_core_runtime.py
(+65 files in other folders)
