[project]
name = "pkuclaw"
version = "0.1.0"
description = "Backend service for a PKU study assistant with Feishu, pku3b, and Codex workers."
requires-python = ">=3.11"
dependencies = [
  "lark-oapi>=1.4.0",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.scripts]
pkuclaw = "pkuclaw.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pkuclaw*"]
