[package]
name = "pku3b"
version = "0.13.0"
edition = "2024"
authors = ["Weiyao Huang <jy.cat@qq.com>"]
license = "MIT"
description = "Raw JSON CLI for PKU Blackboard data."
readme = "README.md"
homepage = "https://github.com/sshwy/pku3b"
repository = "https://github.com/sshwy/pku3b"
keywords = ["cli"]
categories = ["command-line-utilities"]
exclude = ["/assets"]
build = "build.rs"

[dependencies]
aes = { version = "0.8", optional = true }
anyhow = { version = "1.0", default-features = false }
bytes = { version = "1.10", default-features = false }
cbc = { version = "0.1.2", optional = true, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
compio = { version = "0.18", features = [
    "macros",
    "process",
    "polling",
], default-features = false }
cyper = { version = "0.8", default-features = false, features = [
    "cookies",
    "native-tls",
] }
directories = "6.0.0"
env_logger = { version = "0.11", features = [
    "auto-color",
], default-features = false }
futures-util = { version = "0.3", features = [
    "alloc",
    "async-await-macro",
], default-features = false }
http = { version = "1.2.0", default-features = false }
itertools = "0.14.0"
log = "0.4"
m3u8-rs = { version = "6.0", optional = true }
memchr = "2.7"
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
regex = "1.11.1"
scraper = { version = "0.23", default-features = false }
serde = { version = "1.0", features = [
    "serde_derive",
], default-features = false }
serde_json = "1.0"
shadow-rs = { version = "1.0", features = ["build"], default-features = false }
toml = "0.8"
url = "2.5"
cookie_store = "0.22.1"

[build-dependencies]
shadow-rs = { version = "1.0", features = ["build"], default-features = false }

[features]
default = ["video-download"]

aes = ["dep:aes"]
cbc = ["dep:cbc"]
m3u8-rs = ["dep:m3u8-rs"]
video-download = ["m3u8-rs", "aes", "cbc"]

[profile.release]
lto = true
codegen-units = 1
